--- a/gb/18/3/26/n10251490.md
+++ b/gb/18/3/26/n10251490.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/abgcpj303/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/abgcpj303/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/abgcpj303/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/abgcpj303/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/abgcpj303/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/abgcpj303/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/abgcpj303/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/abgcpj303/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/abgcpj303/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/abgcpj303/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/abgcpj303/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/abgcpj303/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/abgcpj303/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/abgcpj303/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/abgcpj303/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/abgcpj303/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/abgcpj303/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/abgcpj303/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/abgcpj303/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/abgcpj303/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/abgcpj303/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/abgcpj303/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/abgcpj303/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/abgcpj303/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>29公顷地4千廉价房 政府Kiwibuild首批落实</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/03/GettyImages-450794268-600x400.jpg" />
 <h6>奥克兰Unitec理工学院Mt Albert校区。(Jason Oxenham/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2018年03月27日讯】（大纪元记者温妮报导）3月25日（周日），<ahref="https://github.com/abgcpj303/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a><ahref="https://github.com/abgcpj303/djy/blob/master/gb/tag/%E4%BD%8F%E6%88%BF.md#1">住房</a>部长菲尔·特怀福德（Phil Twyford）宣布，作为KiwiBuild计划的第一阶段，<ahref="https://github.com/abgcpj303/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>将在<ahref="https://github.com/abgcpj303/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>Unitec理工学院Mt Albert校区的<ahref="https://github.com/abgcpj303/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0.md#1">土地</a>上开发3000～4000套廉价房，以解决奥克兰<ahref="https://github.com/abgcpj303/djy/blob/master/gb/tag/%E4%BD%8F%E6%88%BF.md#1">住房</a>短缺问题。</p>
+<p>【大纪元2018年03月27日讯】（大纪元记者温妮报导）3月25日（周日），<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BD%8F%E6%88%BF.md#1">住房</a>部长菲尔·特怀福德（Phil Twyford）宣布，作为KiwiBuild计划的第一阶段，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>将在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>Unitec理工学院Mt Albert校区的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0.md#1">土地</a>上开发3000～4000套廉价房，以解决奥克兰<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BD%8F%E6%88%BF.md#1">住房</a>短缺问题。</p>
 <p>总理嘉欣达·阿丹（Jacinda Ardern）和特怀福德一起在Unitec校园内的Te Noho Kotahitanga 毛利会堂（Marae）宣布了上述计划。</p>
-<p>Mt Albert距市中心只有9公里。据悉，<ahref="https://github.com/abgcpj303/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>已经在Unitec校园内购买了29公顷<ahref="https://github.com/abgcpj303/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0.md#1">土地</a>，拟建房型包括城市房、排屋和公寓。据特怀福德说，拟建的住房均可负担，2或3居室售价均低于60万元。</p>
+<p>Mt Albert距市中心只有9公里。据悉，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>已经在Unitec校园内购买了29公顷<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0.md#1">土地</a>，拟建房型包括城市房、排屋和公寓。据特怀福德说，拟建的住房均可负担，2或3居室售价均低于60万元。</p>
 <p>阿丹则表示，其中近40%属于政府Kiwibuild计划，主要目标是满足首次置业者。4000套新房中，Kiwibuild可负担住房和福利房占绝大部分，其余部分将以市场价出售。她说，政府希望首批住宅于明年建成入住。</p>
-<p>特怀福德则表示，该计划是Kiwibuild计划中的第一个大型开发项目。他说，许多<ahref="https://github.com/abgcpj303/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>人因住房危机而受苦，孩子们住在汽车里，很多家庭挤在过度拥挤的房子里，对此政府不会坐视不管，政府需要大胆行动来解决这个问题。</p>
+<p>特怀福德则表示，该计划是Kiwibuild计划中的第一个大型开发项目。他说，许多<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>人因住房危机而受苦，孩子们住在汽车里，很多家庭挤在过度拥挤的房子里，对此政府不会坐视不管，政府需要大胆行动来解决这个问题。</p>
 <p>特怀福德没有公布所购土地的价格，只是说以市场价购买。目前不清楚由谁来承建，但特怀福德表示，他希望当地毛利组织能够参与开发。</p>
 <p>奥克兰市长菲尔·高夫（Phil Goff）对政府的上述举措表示欢迎。他说，新的住房开发项目将提供迫切需要的新房，以解决奥克兰住房危机。</p>
 <p>不过国家党指出，Mt Albert住宅开发计划是国家党已经宣布的项目。该党住房发言人朱迪思·柯林斯（Judith Collins）说，前政府已经和Unitec签署了购买其闲置土地开发住房的计划，而且计划的变更也获得了奥克兰市政府批准。</p>
@@ -21,48 +21,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/17/11/30/n9912186.md#1">更易获贷款 房市空档或为首次购房者开道</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/17/12/6/n9929416.md#1">Barfoot公司：奥克兰住房销量年跌二成</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/17/12/6/n9929626.md#1">奥克兰市政府或为征地而强制市民卖房</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/17/12/21/n9979048.md#1">禁外国人买房加速 再促买房者冲刺</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/18/1/25/n10087924.md#1">中国买家兴趣猛增 大年前后或现购房热潮</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/18/2/6/n10120385.md#1">新西兰反外国人买房禁令比澳洲苛刻？</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/18/2/12/n10136133.md#1">奥克兰可负担住房不是梦 专家帮你支招</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/18/2/12/n10136144.md#1">QV：奥克兰房价略涨 惠灵顿飙升 基督城略跌</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/18/3/1/n10183193.md#1">Kiwibuild建房仍难负担 各方出谋划策</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/6/7/n12169023.md#1">大量海外新西兰人计划在回国之前买房</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/11/30/n9912186.md#1">更易获贷款 房市空档或为首次购房者开道</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/6/n9929416.md#1">Barfoot公司：奥克兰住房销量年跌二成</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/6/n9929626.md#1">奥克兰市政府或为征地而强制市民卖房</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/21/n9979048.md#1">禁外国人买房加速 再促买房者冲刺</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/1/25/n10087924.md#1">中国买家兴趣猛增 大年前后或现购房热潮</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/2/6/n10120385.md#1">新西兰反外国人买房禁令比澳洲苛刻？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/2/12/n10136133.md#1">奥克兰可负担住房不是梦 专家帮你支招</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/2/12/n10136144.md#1">QV：奥克兰房价略涨 惠灵顿飙升 基督城略跌</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/1/n10183193.md#1">Kiwibuild建房仍难负担 各方出谋划策</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/3/25/n12834072.md#1">新西兰政府住房新政：谁受益？谁担忧？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/3/n10112268.md#1" target="_blank">林辉：红色公主的大字报让军报少将家破人亡</a></li><li><a href="https://github.com/abgcpj303/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/12/18/n3755139.md#1" target="_blank">佚名：迫害法轮功的中共人员犯了哪些法</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10420942.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489726.md#1" target="_blank">发生在两位西班牙人身上的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/9/30/n12441804.md#1">曾目击UFO 美前飞行员：政府或有外星科技</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/9/21/n12420405.md#1">【成吉思汗】姻缘定 英雄聚 铁木真崛起</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/9/18/n12414341.md#1">为何编写淫书罪深重  刑罚无终了</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/9/25/n12429391.md#1">奥妙莫名中秋节神迹  搭起仙凡之桥</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/5/n12455352.md#1">【直播预告】美国副总统候选人辩论会</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/4/n12452127.md#1">【新闻第一现场】独家揭中共藉交流窃美技术</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/9/2/n12375753.md#1">【思想领袖】班克斯：全球遭难 中共应担责</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/9/30/n12443120.md#1">在Costco购买这八种食品 最合适一家人吃</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/4/n12451696.md#1">中秋节已过 没卖掉的月饼去哪了</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/3/n12451102.md#1">【新闻看点】川普试用新疗法 习要动王岐山？</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/4/n12452582.md#1">李荣浩纠正谢霆锋一叫法 杨丞琳打趣回应</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/3/n12449781.md#1">润娥重温《EXIT》 公开爬绳攀岩练习影片获赞</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/3/n12449423.md#1">第31届金曲奖得奖名单 青峰、魏如萱封歌王歌后</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/4/n12450929.md#1">《艾蜜莉在巴黎》影评：莉莉柯林斯大放异彩 将好故事发扬光大</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/4/n12452790.md#1">刘德华黄历生日 捧大盆红鸡蛋庆祝</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/4/n12451602.md#1">无人机拍到惊人照片：心形鲑鱼群包围鲨鱼</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/9/30/n12443080.md#1">【直播】乳房有硬块是癌症？名医教你抗乳癌</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/4/n12451754.md#1">中共官媒谎称：台士兵一半不识字 开战就投降</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/abgcpj303/djy/blob/master/gb/20/10/4/n12451880.md#1">从意大利到英国 10岁男童走2800公里去看奶奶</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/abgcpj303/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/abgcpj303/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/3/26/n10251490.htm">29公顷地4千廉价房 政府Kiwibuild首批落实</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/3/26/n10251490.htm">29公顷地4千廉价房 政府Kiwibuild首批落实</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/abgcpj303/djy/blob/master/gb/18/3/26/n10251490.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/abgcpj303/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/abgcpj303/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/abgcpj303/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/abgcpj303/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/abgcpj303/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/18/3/26/n10251490.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
